apps/ping_pong_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      volumes:
      - name: shared-logs
        persistentVolumeClaim:
          claimName: logs-pong-claim
      containers:
        - name: ping-pong-app
          image: skinatro/ping-pong-app:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-logs
              mountPath: /tmp/kube
