apps/ping_pong_app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-app-svc
            port:
              number: 5000
      - path: /pings
        pathType: Prefix
        backend:
          service:
            name: ping-pong-app-svc
            port:
              number: 5000
